k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libexplorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libexplorer
  template:
    metadata:
      labels:
        app: libexplorer
    spec:
      containers:
      - name: libexplorer
        image: libexplorer:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
